<resources>
	<string name="app_name">COVID19</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Home</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>

	<string name="home_second">Home Second</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="dashboard">Dashboard</string>
	<string name="testConducted">Test conducted</string>
	<string name="positive_cases">Positive cases</string>
	<string name="recovered">Recovered</string>
	<string name="deaths">Deaths</string>
	<string name="in_last_24_hour">In last 24 hour</string>
	<string name="total">Total</string>
	<string name="map_locator">Map Locator</string>
	<string name="questions_answers"><![CDATA[Questions & Answers]]></string>
	<string name="analytics">Analytics</string>
	<string name="reminder">Reminder</string>
	<string name="shop">Shop</string>
	<string name="donations">Donations</string>
	<string name="set_home_locations">set Home Locations</string>
	<string name="reminder_for_handwash_after_entering_home">Reminder for handwash after entering home</string>
	<string name="use_location_service_to_detect_when_entered_home_from_outside">use location Service to detect when entered home from outside</string>
	<string name="watch">Watch</string>
	<string name="search">Search</string>
</resources>
