<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_dashboard"
			android:title="@string/dashboard" />
		<item
			android:id="@+id/nav_reminder"
			android:title="@string/reminder"/>
		<item
			android:id="@+id/nav_analytics"
			android:title="@string/analytics"/>
		<item
			android:id="@+id/nav_questions_answers"
			android:title="@string/questions_answers"/>
		<item
			android:id="@+id/nav_map"
			android:title="@string/map_locator"/>
		<item
			android:id="@+id/nav_shop"
			android:title="@string/shop"/>
		<item
			android:id="@+id/nav_donations"
			android:title="@string/donations"/>
	</group>
</menu>
