<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black"
	tools:context=".Dashboard">

	<LinearLayout
		android:layout_marginTop="30dp"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_height="wrap_content">
		<TableLayout

			android:layout_width="match_parent"
			android:stretchColumns="*"
			android:layout_height="match_parent">
			<TableRow>
				<TextView
					android:textColor="@color/ash"
					/>
				<TextView
					android:textSize="20sp"
					android:textStyle="bold"
					android:layout_gravity="center"
					android:textColor="@color/green"
					android:text="@string/in_last_24_hour"
					/>
				<TextView
					android:textSize="20sp"
					android:textStyle="bold"
					android:layout_gravity="center"
					android:textColor="@color/green"
					android:text="@string/total"
					/>
			</TableRow>
			<TableRow>
				<TextView
					android:layout_gravity="center"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/blue"
					android:text="@string/testConducted"
					/>
				<TextView
					android:textSize="15sp"
					android:layout_gravity="center"
					android:textColor="@color/ash"
					android:text="3336"
					/>
				<TextView
					android:textSize="15sp"
					android:layout_gravity="center"
					android:textColor="@color/ash"
					android:text="14759"
					/>
			</TableRow>
			<TableRow>
				<TextView
					android:layout_gravity="center"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/blue"
					android:text="@string/positive_cases"
					/>
				<TextView
					android:textSize="15sp"
					android:layout_gravity="center"
					android:textColor="@color/ash"
					android:text="309"
					/>
				<TextView
					android:textSize="15sp"
					android:layout_gravity="center"
					android:textColor="@color/ash"
					android:text="4998"
					/>
			</TableRow>
			<TableRow>
				<TextView
					android:layout_gravity="center"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/blue"
					android:text="@string/recovered"
					/>
				<TextView
					android:textSize="15sp"
					android:layout_gravity="center"
					android:textColor="@color/ash"
					android:text="1"
					/>
				<TextView
					android:textSize="15sp"
					android:layout_gravity="center"
					android:textColor="@color/ash"
					android:text="113"
					/>
			</TableRow>
			<TableRow>
				<TextView
					android:layout_gravity="center"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/blue"
					android:text="@string/deaths"
					/>
				<TextView
					android:textSize="15sp"
					android:layout_gravity="center"
					android:textColor="@color/ash"
					android:text="9"
					/>
				<TextView
					android:textSize="15sp"
					android:layout_gravity="center"
					android:textColor="@color/ash"
					android:text="140"
					/>
			</TableRow>
		</TableLayout>
		<GridView
			android:layout_marginTop="50dp"
			android:id="@+id/dashboardGridViewID"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:numColumns="2"
			>

		</GridView>
	</LinearLayout>

</FrameLayout>