<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"

	tools:context=".Reminder">

	<!-- TODO: Update blank fragment layout -->
	<LinearLayout
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_height="match_parent">
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/reminder"/>

		<Button
			android:layout_marginTop="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/set_home_locations"/>
		<LinearLayout
			android:layout_marginTop="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<Switch
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			<TextView
				android:layout_marginStart="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/reminder_for_handwash_after_entering_home"/>
		</LinearLayout>
		<LinearLayout
			android:layout_marginTop="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<Switch
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			<TextView
				android:layout_marginStart="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/use_location_service_to_detect_when_entered_home_from_outside"/>
		</LinearLayout>
	</LinearLayout>

</FrameLayout>